--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tesseract-plumbing"
-version = "0.11.0"
+version = "0.11.1"
 authors = ["Chris Couzens <ccouzens@gmail.com>"]
 edition = "2018"
 description = "Safe wrapper of `tesseract-sys`"
@@ -10,7 +10,7 @@ readme = "README.md"
 keywords = ["leptonica", "tesseract", "ocr", "image"]
 license = "MIT"
 [dependencies]
-tesseract-sys = "~0.6"
+tesseract-sys = "~0.6.2"
 leptonica-plumbing = "1.0"
 thiserror = "1.0"
 
@@ -18,5 +18,6 @@ thiserror = "1.0"
 image = "0.24.7"
 
 [features]
-default = ["tesseract_5_2"]
+default = []
 tesseract_5_2 = []
+bundled = ["tesseract-sys/bundled"]
